# blog

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README-ja.md  README.md  _vim-open-recent-used-files.bat  artifact-preview.js  circle.yml  feed.xml  haskell-jp-blog.cabal  index.html  stack.yaml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: topic-request.md
css/: bootstrap.css  clean-blog.css  style.css  syntax.css
drafts/: 2017-03-25-sample-post.html  2017-04-03-haskell-on-heroku.html  about_us.html  template.html
examples/strict-gotchas/: README.md  folding.hs  stack.yaml  stackoverflow-foldr.hs  stackoverflow.hs  storable.hs  tuple.hs
posts/: about_admins.html  about_us.html  grc.html  links.html
posts/2017/: 01-first.html  02-haskell-on-heroku.html  03-haskell-antenna.html  04-slack-archive.html  05-subreddit.html  06-ghc-install.html  07-TypedHoles.html  08-ghc-4way-execution.html  09-ghc-users-guide.html  10-about-kind-system-part1.html  11-haskell-newbies-talks.html  12-ghc-show-info.html  13-about-kind-system-part2.html  advent-calendar-2017.html  no-stack-build.html  typesafe-precure2.html  windows-gotchas.html
posts/2018/: about-ghc-exts-1.html  derive-json-no-prefix.html  ghc-proposal-and-patch.html  haskell-day-2018.html  main-tester.html  renew-haskell-antenna.html  substring-parser.html  super-precure-monad.html  tech-book-fest-5.html  topic-request.html  windows-gotchas-en.html  (+2 more)
preprocessed-site/: about.html  contact.html  feed.md  index.html
src/: site.hs
test/: DocTest.hs
(+124 files in other folders)
