name:               haskell-jp-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            MIT
license-file:       LICENSE

executable site
  hs-source-dirs:   src
  main-is:          site.hs
  build-depends:    base == 4.*
                  , containers >= 0.5
                  , data-default >= 0.5
                  , hakyll
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
